libs/preprocessor/tests/errors/pe14_include_unexpected_suffix/stderr.ansi
[31m[PE14] Error:[0m unexpected tokens after include
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:1:25[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m#[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mc[0m[38;5;249ml[0m[38;5;249mu[0m[38;5;249md[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m<[0m[38;5;249ms[0m[38;5;249mo[0m[38;5;249mm[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249mh[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m.[0m[38;5;249mh[0m[38;5;249mp[0m[38;5;249mp[0m[38;5;249m>[0m[38;5;201m;[0m
 [38;5;240m  │[0m                         [38;5;201m┬[0m  
 [38;5;240m  │[0m                         [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m expected end of line
[38;5;246m───╯[0m
